src/chrome/komodo/skin/plat/mac/menus.less
@import url("chrome://komodo/skin/plat/shared/menus.less");

/**
 * File Status within menu items.
 */
.menu-file-status-image-box {
    padding-left: 0; /* remove 2px padding set in widgets.css */
    /* Ensure these is enough room to display all icons evenly - keeps the
       list of menuitems a uniform width (16px for image, 4px for padding). */
    min-width: 20px;
}

/* Fix menu alignment when icons are visible */
menu, menuitem
{
    padding-left: 26px;

    .menu-iconic-icon:not([disabled])
    {
        /* force 16px width as some menuitems have an image element with
         * no actual image src */
        width: 16px;
        margin-left: -21px;
    }
}

/* Disable main menubar menu icons */
#toolbar-menubar menu.menu-iconic,
#toolbar-menubar menuitem.menuitem-iconic
{
    /* Requires important due to some icon rules having an !important rule
     * These icons in turn require the rule due to the hierarchy of platform.less
     * See bug #97665 */
    list-style-image: none !important;
}

